Revamped the project preview section of the webpage, added a new animation for the project preview image, and made some minor styling adjustments to the project preview section. Also added a max-width to the links in the project preview section to prevent them from overflowing on smaller screens.

--- a/src/App.css
+++ b/src/App.css
@@ -60,6 +60,24 @@
     box-shadow: var(--shadow);
   }
 
+  .profile-container {
+    position: relative;
+  }
+
+  .spinning {
+    animation: spin 1.5s ease-out;
+  }
+
+  .explosion-overlay {
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 128px;
+    height: 128px;
+    border-radius: 999px;
+    object-fit: cover;
+  }
+
   @media (max-width: 1024px) {
     margin-top: 40px;
     flex-direction: column;
@@ -74,7 +92,7 @@
 }
 
 #projects {
-  display: flexbox;
+  display: inline;
   border-top: 1px solid var(--border);
   text-align: center;
 
@@ -99,14 +117,14 @@
 
   a {
     margin: 8px;
+    max-width: 200px;
     color: var(--text-h);
     font-size: 10px;
     border-radius: 14px;
     background: var(--social-bg);
-    display: inline-flex;
-    padding: 8px 8px;
+    display:inline-block;
+    padding: 2px 12px;
     align-items: center;
-    gap: 10px;
     text-decoration: none;
     transition: box-shadow 0.3s;
 
@@ -116,14 +134,24 @@
   }
 
   img {
-    height: 128px;
-    width: 128px;
+    width: 100%;
+    max-width: 200px;
     border-radius: 6px;
   }
 
   h2 {
     font-size: 1.8rem;
-    margin: 8px;
+    margin: 16px;
+  }
+
+  h3 {
+    font-size: 0.7rem;
+    margin: 2px;
+  }
+
+  p {
+    line-height: 1;
+    margin-bottom: 8px;
   }
 }
 
@@ -193,19 +221,16 @@
   }
 }
 
-.grid-container {
-  position: fixed;
-  inset: 0;
-  display: grid;
-  grid-template-rows: repeat(7, 1fr);
-  grid-auto-flow: column;
-  grid-auto-columns: 1fr;
-  gap: 4px;
-  padding: 4px;
-  z-index: 1;
+.noStyle {
+  all: unset;
+  cursor: pointer;
 }
 
-.square {
-  border-radius: 2px;
-  background-color: #161b22;
+@keyframes spin {
+  from {
+    transform: rotateY(0deg);
+  }
+  to {
+    transform: rotateY(1800deg);
+  }
 }
